Fix T47592: Wrong line width w/ custom-bones